--- a/Rocambulesque/package.json
+++ b/Rocambulesque/package.json
@@ -1,25 +1,30 @@
 {
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "axios": "^1.1.2",
-    "laravel-vite-plugin": "^0.8.0",
-    "sass": "^1.67.0",
-    "vite": "^4.0.0"
-  },
-  "name": "rocambulesque",
-  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-  "version": "1.0.0",
-  "main": "vite.config.js",
-  "directories": {
-    "test": "tests",
-    "scss": "sass -w scss:css",
-    "minify": "sass -w scss:css --style=compressed"
-  },
-  "author": "",
-  "license": "ISC"
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
+        "axios": "^1.1.2",
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.6",
+        "sass": "^1.67.0",
+        "tailwindcss": "^3.1.0",
+        "vite": "^4.0.0"
+    },
+    "name": "rocambulesque",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "version": "1.0.0",
+    "main": "vite.config.js",
+    "directories": {
+        "test": "tests",
+        "scss": "sass -w scss:css",
+        "minify": "sass -w scss:css --style=compressed"
+    },
+    "author": "",
+    "license": "ISC"
 }
